ssr showing signs of progress but bugfixes required

--- a/client/internal/theme/quill.scss
+++ b/client/internal/theme/quill.scss
@@ -1,3 +1,5 @@
+@import "~@onzag/react-quill/dist/quill.core.css";
+
 $toolbar-color: rgba(0, 0, 0, 0.09);
 $quote-background-color: rgba(0, 0, 0, 0.09);
 $quote-highlight-color: #26a69a;
