documentation and optimization

--- a/client/fast-prototyping/components/util.scss
+++ b/client/fast-prototyping/components/util.scss
@@ -1,3 +1,8 @@
+/**
+ * Contains utilities css for using in these
+ * components
+ */
+
 @keyframes flicker {
   0% { opacity:1; }
   50% { opacity:0; }
