--- a/client/internal/theme/quill.scss
+++ b/client/internal/theme/quill.scss
@@ -45,6 +45,7 @@ $list-item-color: rgb(63, 81, 181);;
   position: relative;
   overflow: hidden;
   overflow-wrap: break-word;
+  width: 100%;
 
   .ql-editor {
     overflow: hidden;
