--- a/client/internal/theme/base.scss
+++ b/client/internal/theme/base.scss
@@ -1,3 +1,5 @@
+@import "./rich.scss";
+
 @mixin prefix($property, $prefixes, $values...) {
   @each $prefix in $prefixes {
     #{"-" + $prefix + "-" + $property}: $values;
