--- a/client/internal/theme/rich.scss
+++ b/client/internal/theme/rich.scss
@@ -142,6 +142,10 @@ $superblock-highlight-color: #33691e;
       }
     }
   }
+
+  img.selected {
+    box-shadow: 0 0 5px $general-highlight-color, 0 0 5px $general-highlight-color, 0 0 5px $general-highlight-color;
+  }
   
   .video {
     position: relative;
