--- a/client/internal/theme/rich.scss
+++ b/client/internal/theme/rich.scss
@@ -134,10 +134,33 @@ $superblock-highlight-color: #33691e;
     content: '';
   }
 
-  h1 {
-    font-size: 1.6rem;
+  h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
     text-align: left;
+  }
+
+  h1 {
+    font-size: 1.6rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  h3 {
+    font-size: 1.4rem;
+  }
+
+  h4 {
+    font-size: 1.3rem;
+  }
+
+  h5 {
+    font-size: 1.2rem;
+  }
+
+  h6 {
+    font-size: 1.1rem;
   }
 
   .image {
