--- a/client/internal/theme/rich.scss
+++ b/client/internal/theme/rich.scss
@@ -17,6 +17,7 @@ $superblock-highlight-color: #33691e;
   position: relative;
   overflow: hidden;
   overflow-wrap: break-word;
+  white-space: pre-wrap;
   width: 100%;
 
   a {
