--- a/client/internal/theme/rich.scss
+++ b/client/internal/theme/rich.scss
@@ -89,6 +89,14 @@ $superblock-highlight-color: #33691e;
     li > * {
       padding-left: 2.5rem;
     }
+
+    li > ul > li::before {
+      content: "\25AA";
+    }
+
+    li > ul > li > ul > li::before {
+      content: "\2023";
+    }
   }
 
   ol {
